[package]
name = "urbanflow"
version = "0.1.0"
edition = "2024"
description = "A reinforcement learning environment for building and optimizing multimodal urban transit networks."
license = "MIT"
repository = "https://github.com/utilForever/urbanflow"
readme = "README.md"
keywords = ["simulation", "urban", "transport", "transit", "rl"]
categories = ["science", "simulation", "artificial-intelligence"]

[lib]
name = "urbanflow"
path = "src/lib.rs"
